Updated readme, changed client and changed folders
Client now functions more like described in the assignment.
Username is part of the initial arguments.

--- a/assignment_4/Makefile
+++ b/assignment_4/Makefile
@@ -5,17 +5,17 @@ all: chatServer chatClient
 chatServer: chatServer.o helper.o
 	gcc chatServer.o helper.o -o chatServer -l pthread
 
-chatServer.o: server/chatServer.c server/helper.h
-	gcc -c server/chatServer.c
+chatServer.o: chatServer.c helper.h
+	gcc -c chatServer.c
 
 chatClient: chatClient.o helper.o
 	gcc chatClient.o helper.o -o chatClient -l pthread
 
-chatClient.o: client/chatClient.c server/helper.h
-	gcc -c client/chatClient.c -iquote server
+chatClient.o: chatClient.c helper.h
+	gcc -c chatClient.c
 
-helper.o: server/helper.c server/helper.h
-	gcc -c server/helper.c
+helper.o: helper.c helper.h
+	gcc -c helper.c
 
 clean:
 	rm -f chatServer chatServer.o chatClient chatClient.o helper.o
